--- a/task1.html
+++ b/task1.html
@@ -1,1 +1,16 @@
-creates task1.txt file
+<html lang="en">
+    <head>
+        <title>Document 1 </title>
+    </head>
+    <body>
+      <h1> guvi</h1>
+
+    <div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit.
+    
+            <div>
+                Guvi Geek Network
+            </div>
+            </div>
+        </body>
+    </html>
